# sudoku-solver

./: Cargo.toml  README.md  TODO.md  ws.js
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  Cell.tsx  Grid.tsx
src/: location.rs  main.rs  validation.rs
src/sudoku/: game.rs  location.rs  mod.rs  validation.rs
